<resources>
    <string name="app_name">LoveCalculator5</string>
    <string name="first_name">First Name</string>
    <string name="second_name">Second Name</string>
    <string name="calculate">calculate</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="you">You</string>
    <string name="me">me</string>
    <string name="try_again">try again</string>
    <string name="_100">100%</string>
    <string name="result">result</string>
    <string name="love_calculator">Love Calculator</string>
    <string name="get_started">Get Started</string>
    <string name="history">History</string>
    <string name="equal_sign">=</string>
</resources>