<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CalculateFragment"
    android:padding="16dp"
    >

    <ImageView
        android:id="@+id/ivLove"
        android:layout_width="300dp"
        android:layout_height="300dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="12dp"
        />
    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/ivLove"
        app:layout_constraintStart_toStartOf="parent"
        android:text="Love Calculator"
        android:textSize="30sp"
        android:textColor="@color/blue"
        android:textStyle="bold"
        android:layout_marginTop="24dp"
        />
    <EditText
        android:id="@+id/etFirstName"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        app:layout_constraintTop_toBottomOf="@+id/tvTitle"
        android:hint="@string/first_name"
        android:background="@drawable/edit_text_bg"
        android:paddingHorizontal="12dp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_marginTop="24dp"
        />
    <EditText
        android:id="@+id/etSecondName"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        app:layout_constraintTop_toBottomOf="@+id/etFirstName"
        android:hint="@string/second_name"
        android:background="@drawable/edit_text_bg"
        android:paddingHorizontal="12dp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_marginTop="20dp"
        />
    <Button
        android:id="@+id/btnCalculate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/etSecondName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/calculate"
        android:textAllCaps="true"
        android:layout_marginTop="20dp"
        android:textStyle="bold"
        android:backgroundTint="@color/blue"
        />

</androidx.constraintlayout.widget.ConstraintLayout>